# serializer version: 1
# name: test_human[board --phase P1]
  tuple(
    0,
    '''
      <!-- GENERATED by `ddflow render`. Do not edit: the event log is the source of truth. -->
      
      # Work queue
      
      ## P1 — Ship the parser
      
      `open` · ██████░░░░░░░░░░░░ 1/3 tasks
      
      > Parse the config files.
      
      | | Task | State | Needs | Globs | Gates | Owner |
      |---|---|---|---|---|---|---|
      | [ ] | **T3** Error messages | open | T2 | `src/errors.py` | `          ` | — |
      | [x] | **T1** Tokenizer | done | — | `src/lex.py` | `          ` | — |
      | [ ] | **T2** Grammar | open | T1 | `src/parse.py` | `          ` | — |
      
      <sub>Gate column order: research · rules · implement · rubber_duck · critic · standards · unit_tests · bug_hunt · dedupe · merge. `x` passed `!` failed `?` unavailable `~` partial `-` skipped</sub>
      
      **Critical path** (2 deep — this, not the task count, sets the wall-clock floor): `T2` → `T3`
      
  
    ''',
    '',
  )
# ---
# name: test_human[board --phase nope]
  tuple(
    1,
    '',
    '''
      no such phase or item 'nope'.
  
    ''',
  )
# ---
# name: test_human[board]
  tuple(
    0,
    '''
      <!-- GENERATED by `ddflow render`. Do not edit: the event log is the source of truth. -->
      
      # Work queue
      
      ## P1 — Ship the parser
      
      `open` · ██████░░░░░░░░░░░░ 1/3 tasks
      
      > Parse the config files.
      
      | | Task | State | Needs | Globs | Gates | Owner |
      |---|---|---|---|---|---|---|
      | [ ] | **T3** Error messages | open | T2 | `src/errors.py` | `          ` | — |
      | [x] | **T1** Tokenizer | done | — | `src/lex.py` | `          ` | — |
      | [ ] | **T2** Grammar | open | T1 | `src/parse.py` | `          ` | — |
      
      <sub>Gate column order: research · rules · implement · rubber_duck · critic · standards · unit_tests · bug_hunt · dedupe · merge. `x` passed `!` failed `?` unavailable `~` partial `-` skipped</sub>
      
      **Critical path** (2 deep — this, not the task count, sets the wall-clock floor): `T2` → `T3`
      
  
    ''',
    '',
  )
# ---
# name: test_human[bug list --all]
  tuple(
    0,
    '''
        B1                 open       Tokenizer drops a trailing comment  [2026-01-01]
  
    ''',
    '',
  )
# ---
# name: test_human[bug list --item T1]
  tuple(
    0,
    '''
        B1                 open       Tokenizer drops a trailing comment  [2026-01-01]
      
      (open bugs only; --all includes fixed and invalid)
  
    ''',
    '',
  )
# ---
# name: test_human[bug list]
  tuple(
    0,
    '''
        B1                 open       Tokenizer drops a trailing comment  [2026-01-01]
      
      (open bugs only; --all includes fixed and invalid)
  
    ''',
    '',
  )
# ---
# name: test_human[history]
  tuple(
    0,
    '''
      10 event(s); newest 10 first:
      
        2026-01-01 00:10  golden         T1                     completed              
        2026-01-01 00:09  golden         R49b608db82            research               Is recursive descent fast enough?
        2026-01-01 00:08  golden         B1                     BUG found              Tokenizer drops a trailing comment
        2026-01-01 00:07  golden         M1                     remembered             The CI runner has 4 cores
        2026-01-01 00:06  golden         D1                     DECISION               Hand-written parser
        2026-01-01 00:05  golden         L1                     lesson                 Pin the grammar before refactoring it
        2026-01-01 00:04  golden         T3                     task added             Error messages
        2026-01-01 00:03  golden         T2                     task added             Grammar
        2026-01-01 00:02  golden         T1                     task added             Tokenizer
        2026-01-01 00:01  golden         P1                     phase added            Ship the parser
      
        Ordered by Lamport clock, not wall time: two agents have two clocks, and 
        sorting a merged history by timestamp interleaves them wrongly.
  
    ''',
    '',
  )
# ---
# name: test_human[lesson list --all]
  tuple(
    0,
    '''
        L1                 live       Pin the grammar before refactoring it  [@golden 2026-01-01]
  
    ''',
    '',
  )
# ---
# name: test_human[lesson list]
  tuple(
    0,
    '''
        L1                 live       Pin the grammar before refactoring it  [@golden 2026-01-01]
      
      (live lessons only; --all includes superseded)
  
    ''',
    '',
  )
# ---
# name: test_human[loops]
  tuple(
    2,
    '''
      No loops detected (10 events, 4 items).
      Checked: dependency cycles, repeat claims, gate flapping, repeated failures, reopened items, duplicate work, stalled queue.
  
    ''',
    '',
  )
# ---
# name: test_human[phase list --state done]
  tuple(
    2,
    '''
      No phase records matching {'state': 'done'}.
  
    ''',
    '',
  )
# ---
# name: test_human[phase list]
  tuple(
    0,
    '''
        P1                 open       1/3    Ship the parser  [2026-01-01]
  
    ''',
    '',
  )
# ---
# name: test_human[progress T1]
  tuple(
    0,
    '''
      item           state      att      held gates commits  holders
      T1             done         0         -     0       0  -
      
      T1 — Tokenizer
      
      1 item(s) · 0.0 agent-hours recorded · 0 commit(s)
  
    ''',
    '',
  )
# ---
# name: test_human[progress]
  tuple(
    0,
    '''
      item           state      att      held gates commits  holders
      P1             open         0         -     0       0  -
      T1             done         0         -     0       0  -
      T2             open         0         -     0       0  -
      T3             open         0         -     0       0  -
      
      4 item(s) · 0.0 agent-hours recorded · 0 commit(s)
  
    ''',
    '',
  )
# ---
# name: test_human[rebuild]
  tuple(
    0,
    '''
      rebuilt index from 10 events in <S>s (4 items, 1 lessons)
  
    ''',
    '',
  )
# ---
# name: test_human[recover]
  tuple(
    2,
    '''
      Nothing to recover — no expired leases, no orphan worktrees.
  
    ''',
    '',
  )
# ---
# name: test_human[render --show board]
  tuple(
    0,
    '''
      <!-- GENERATED by `ddflow render`. Do not edit: the event log is the source of truth. -->
      
      # Work queue
      
      ## P1 — Ship the parser
      
      `open` · ██████░░░░░░░░░░░░ 1/3 tasks
      
      > Parse the config files.
      
      | | Task | State | Needs | Globs | Gates | Owner |
      |---|---|---|---|---|---|---|
      | [ ] | **T3** Error messages | open | T2 | `src/errors.py` | `          ` | — |
      | [x] | **T1** Tokenizer | done | — | `src/lex.py` | `          ` | — |
      | [ ] | **T2** Grammar | open | T1 | `src/parse.py` | `          ` | — |
      
      <sub>Gate column order: research · rules · implement · rubber_duck · critic · standards · unit_tests · bug_hunt · dedupe · merge. `x` passed `!` failed `?` unavailable `~` partial `-` skipped</sub>
      
      **Critical path** (2 deep — this, not the task count, sets the wall-clock floor): `T2` → `T3`
      
  
    ''',
    '',
  )
# ---
# name: test_human[render --show bogus]
  tuple(
    1,
    '',
    '''
      unknown view 'bogus'; known: board, bugs, decisions, lessons, lessons-summary, research, sessions
  
    ''',
  )
# ---
# name: test_human[render --show lessons]
  tuple(
    0,
    '''
      <!-- GENERATED by `ddflow render`. Do not edit: the event log is the source of truth. -->
      
      # Lessons
      
      ## untagged
      
      ### Pin the grammar before refactoring it
      
      **Rule.** Snapshot parser output first
      
      **Why.** A refactor changed precedence silently
      
      **How to apply.** golden tests
      
  
    ''',
    '',
  )
# ---
# name: test_human[replay --verify]
  tuple(
    0,
    '''
      # Reconstruction brief — proj
      
      This document was generated from ddflow's event log by `ddflow replay`. It is
      the complete decision history of the project: every operator instruction, every
      research verdict, every lesson, and the shape of the work queue.
      
      **How to use it.** Hand it to a coding agent with an empty repository and ask it
      to work through the instructions in order. It will not reproduce the original
      source byte-for-byte — model outputs are not deterministic — but it has every
      input that produced the original, which no other artefact does.
      
      - Phases: 1
      - Tasks: 3
      - Lessons carried forward: 1
      - Architectural decisions in force: 1
      - Research notes: 1 (1 confirmed, 0 refuted)
      
      ## Architectural decisions in force
      
      These bind the rebuild. They are the part no other artefact records: source
      code shows what was built and never why, nor what was rejected on the way.
      
      - **Hand-written parser** — Recursive descent, no generator
        - governs: src/**
      
      ## Standing knowledge — read before starting
      
      These were learned the hard way during the original build. They are inputs,
      not history: applying them is how the rebuild avoids repeating the mistakes.
      
      - **Pin the grammar before refactoring it** — Snapshot parser output first
      
      ## The instruction history
      
      ### 1. [PHASE] 2026-01-01T00:01:00Z — `P1`
      
      P1: Ship the parser
      
      Parse the config files.
      
      ### 2. [TASK] 2026-01-01T00:02:00Z — `T1`
      
      T1: Tokenizer (in P1; needs -; writes src/lex.py)
      
      ### 3. [TASK] 2026-01-01T00:03:00Z — `T2`
      
      T2: Grammar (in P1; needs T1; writes src/parse.py)
      
      ### 4. [TASK] 2026-01-01T00:04:00Z — `T3`
      
      T3: Error messages (in P1; needs T2; writes src/errors.py)
      
      ### 5. [LESSON] 2026-01-01T00:05:00Z
      
      Pin the grammar before refactoring it: Snapshot parser output first
      
      ### 6. [DECISION] 2026-01-01T00:06:00Z
      
      Hand-written parser
      
      Decision: Recursive descent, no generator
      
      Governs: src/**
      
      ### 7. [RESEARCH] 2026-01-01T00:09:00Z — `P1`
      **Verdict: CONFIRMED**
      
      Is recursive descent fast enough? -> It parses 10k lines in under 50ms
      
      ### 8. [SHIPPED] 2026-01-01T00:10:00Z — `T1`
      
      T1
      
  
    ''',
    '',
  )
# ---
# name: test_human[replay]
  tuple(
    0,
    '''
      # Reconstruction brief — proj
      
      This document was generated from ddflow's event log by `ddflow replay`. It is
      the complete decision history of the project: every operator instruction, every
      research verdict, every lesson, and the shape of the work queue.
      
      **How to use it.** Hand it to a coding agent with an empty repository and ask it
      to work through the instructions in order. It will not reproduce the original
      source byte-for-byte — model outputs are not deterministic — but it has every
      input that produced the original, which no other artefact does.
      
      - Phases: 1
      - Tasks: 3
      - Lessons carried forward: 1
      - Architectural decisions in force: 1
      - Research notes: 1 (1 confirmed, 0 refuted)
      
      ## Architectural decisions in force
      
      These bind the rebuild. They are the part no other artefact records: source
      code shows what was built and never why, nor what was rejected on the way.
      
      - **Hand-written parser** — Recursive descent, no generator
        - governs: src/**
      
      ## Standing knowledge — read before starting
      
      These were learned the hard way during the original build. They are inputs,
      not history: applying them is how the rebuild avoids repeating the mistakes.
      
      - **Pin the grammar before refactoring it** — Snapshot parser output first
      
      ## The instruction history
      
      ### 1. [PHASE] 2026-01-01T00:01:00Z — `P1`
      
      P1: Ship the parser
      
      Parse the config files.
      
      ### 2. [TASK] 2026-01-01T00:02:00Z — `T1`
      
      T1: Tokenizer (in P1; needs -; writes src/lex.py)
      
      ### 3. [TASK] 2026-01-01T00:03:00Z — `T2`
      
      T2: Grammar (in P1; needs T1; writes src/parse.py)
      
      ### 4. [TASK] 2026-01-01T00:04:00Z — `T3`
      
      T3: Error messages (in P1; needs T2; writes src/errors.py)
      
      ### 5. [LESSON] 2026-01-01T00:05:00Z
      
      Pin the grammar before refactoring it: Snapshot parser output first
      
      ### 6. [DECISION] 2026-01-01T00:06:00Z
      
      Hand-written parser
      
      Decision: Recursive descent, no generator
      
      Governs: src/**
      
      ### 7. [RESEARCH] 2026-01-01T00:09:00Z — `P1`
      **Verdict: CONFIRMED**
      
      Is recursive descent fast enough? -> It parses 10k lines in under 50ms
      
      ### 8. [SHIPPED] 2026-01-01T00:10:00Z — `T1`
      
      T1
      
  
    ''',
    '',
  )
# ---
# name: test_human[research list --limit 1]
  tuple(
    0,
    '''
        R49b608db82        confirmed  Is recursive descent fast enough?  [2026-01-01]
  
    ''',
    '',
  )
# ---
# name: test_human[research list]
  tuple(
    0,
    '''
        R49b608db82        confirmed  Is recursive descent fast enough?  [2026-01-01]
  
    ''',
    '',
  )
# ---
# name: test_human[search --exact tok]
  tuple(
    0,
    '''
        task      T1                     done         2026-01-01  Tokenizer
        bug       B1                     open         2026-01-01  Tokenizer drops a trailing comment
  
    ''',
    '',
  )
# ---
# name: test_human[search --regex (a+)+$]
  tuple(
    3,
    '',
    '''
      regex refused: a repeat of variable length inside another repeat can take exponential time
  
    ''',
  )
# ---
# name: test_human[search --regex tok.*]
  tuple(
    0,
    '''
        task      T1                     done         2026-01-01  Tokenizer
        bug       B1                     open         2026-01-01  Tokenizer drops a trailing comment
  
    ''',
    '',
  )
# ---
# name: test_human[search tokenizer]
  tuple(
    0,
    '''
        task      T1                     done         2026-01-01  Tokenizer
        bug       B1                     open         2026-01-01  Tokenizer drops a trailing comment
  
    ''',
    '',
  )
# ---
# name: test_human[search zzzzqq]
  tuple(
    2,
    '''
      No matches for 'zzzzqq' (ranked); searched 10 records.
  
    ''',
    '',
  )
# ---
# name: test_human[session list --state open]
  tuple(
    2,
    '''
      No sessions matching {'state': 'open'}. (Prompts recorded with no session are attached by `ddflow session adopt-orphans`.)
  
    ''',
    '',
  )
# ---
# name: test_human[session list]
  tuple(
    2,
    '''
      No sessions. (Prompts recorded with no session are attached by `ddflow session adopt-orphans`.)
  
    ''',
    '',
  )
# ---
# name: test_human[session show nope]
  tuple(
    3,
    '',
    '''
      no session 'nope' (`ddflow session list` shows them)
  
    ''',
  )
# ---
# name: test_human[show B1]
  tuple(
    0,
    '''
      B1 [bug] open
        found 2026-01-01T00:08:00Z on T1
      
      Tokenizer drops a trailing comment
  
    ''',
    '',
  )
# ---
# name: test_human[show NOPE]
  tuple(
    1,
    '',
    '''
      no such item or bug 'NOPE'
  
    ''',
  )
# ---
# name: test_human[show T1]
  tuple(
    0,
    '''
      T1 [task] Tokenizer
        state done
        globs src/lex.py
        [ ] research
        [ ] rules
        [ ] implement
        [ ] rubber_duck
        [ ] critic
        [ ] standards
        [ ] unit_tests
        [ ] bug_hunt
        [ ] dedupe
        [ ] merge
      
      ## Completion ledger (reconstructed from the log: no git facts were recorded)
        completed 2026-01-01T00:10:00Z as -; requirement ea85d180a16d
        files changed: UNKNOWN (no sha, or git could not list it)
  
    ''',
    '',
  )
# ---
# name: test_human[show T2]
  tuple(
    0,
    '''
      T2 [task] Grammar
        state open
        needs T1
        globs src/parse.py
        [ ] research
        [ ] rules
        [ ] implement
        [ ] rubber_duck
        [ ] critic
        [ ] standards
        [ ] unit_tests
        [ ] bug_hunt
        [ ] dedupe
        [ ] merge
  
    ''',
    '',
  )
# ---
# name: test_human[status]
  tuple(
    0,
    '''
      # proj
      
      1/3 tasks complete across 1 phase(s); 0.0 agent-hours, 0 commit(s).
      
      Completed:
        [x] T1           Tokenizer
      
      Ready to start:
        [ ] T2           Grammar
      
      parallel: 4 (fixed)
      
      Blocked: T3 (deps)
      
      Recorded: 1 architectural decision(s) · 1 lesson(s) · 1 OPEN bug(s)
      
      Nothing looping, nothing to recover.
  
    ''',
    '',
  )
# ---
# name: test_human[task list --owner nobody]
  tuple(
    2,
    '''
      No task records matching {'agent': 'nobody'}.
  
    ''',
    '',
  )
# ---
# name: test_human[task list --phase P1 --limit 1]
  tuple(
    0,
    '''
        T1                 done       Tokenizer  [2026-01-01]
      
      (showing 1 of 3; raise --limit)
  
    ''',
    '',
  )
# ---
# name: test_human[task list --since 2020-01-01]
  tuple(
    0,
    '''
        T1                 done       Tokenizer  [2026-01-01]
        T3                 open       Error messages  [2026-01-01]
        T2                 open       Grammar  [2026-01-01]
  
    ''',
    '',
  )
# ---
# name: test_human[task list --state bogus]
  tuple(
    2,
    '''
      No task records matching {'state': 'bogus'}.
  
    ''',
    '',
  )
# ---
# name: test_human[task list --state done]
  tuple(
    0,
    '''
        T1                 done       Tokenizer  [2026-01-01]
  
    ''',
    '',
  )
# ---
# name: test_human[task list --tag x]
  tuple(
    2,
    '''
      No task records matching {'tag': 'x'}.
  
    ''',
    '',
  )
# ---
# name: test_human[task list]
  tuple(
    0,
    '''
        T1                 done       Tokenizer  [2026-01-01]
        T3                 open       Error messages  [2026-01-01]
        T2                 open       Grammar  [2026-01-01]
  
    ''',
    '',
  )
# ---
# name: test_json[board --phase P1]
  tuple(
    0,
    '''
      {
        "schema": "board@1",
        "text": "<!-- GENERATED by `ddflow render`. Do not edit: the event log is the source of truth. -->\n\n# Work queue\n\n## P1 \u2014 Ship the parser\n\n`open` \u00b7 \u2588\u2588\u2588\u2588\u2588\u2588\u2591\u2591\u2591\u2591\u2591\u2591\u2591\u2591\u2591\u2591\u2591\u2591 1/3 tasks\n\n> Parse the config files.\n\n| | Task | State | Needs | Globs | Gates | Owner |\n|---|---|---|---|---|---|---|\n| [ ] | **T3** Error messages | open | T2 | `src/errors.py` | `          ` | \u2014 |\n| [x] | **T1** Tokenizer | done | \u2014 | `src/lex.py` | `          ` | \u2014 |\n| [ ] | **T2** Grammar | open | T1 | `src/parse.py` | `          ` | \u2014 |\n\n<sub>Gate column order: research \u00b7 rules \u00b7 implement \u00b7 rubber_duck \u00b7 critic \u00b7 standards \u00b7 unit_tests \u00b7 bug_hunt \u00b7 dedupe \u00b7 merge. `x` passed `!` failed `?` unavailable `~` partial `-` skipped</sub>\n\n**Critical path** (2 deep \u2014 this, not the task count, sets the wall-clock floor): `T2` \u2192 `T3`\n",
        "phase": "P1",
        "phases": [
          {
            "id": "P1",
            "title": "Ship the parser",
            "state": "open",
            "needs": [],
            "holder": "",
            "tasks": [
              {
                "id": "T3",
                "title": "Error messages",
                "state": "open",
                "parent": "P1",
                "depth": 0,
                "needs": [
                  "T2"
                ],
                "globs": [
                  "src/errors.py"
                ],
                "owner": "",
                "gates": {
                  "research": "",
                  "rules": "",
                  "implement": "",
                  "rubber_duck": "",
                  "critic": "",
                  "standards": "",
                  "unit_tests": "",
                  "bug_hunt": "",
                  "dedupe": "",
                  "merge": ""
                }
              },
              {
                "id": "T1",
                "title": "Tokenizer",
                "state": "done",
                "parent": "P1",
                "depth": 0,
                "needs": [],
                "globs": [
                  "src/lex.py"
                ],
                "owner": "",
                "gates": {
                  "research": "",
                  "rules": "",
                  "implement": "",
                  "rubber_duck": "",
                  "critic": "",
                  "standards": "",
                  "unit_tests": "",
                  "bug_hunt": "",
                  "dedupe": "",
                  "merge": ""
                }
              },
              {
                "id": "T2",
                "title": "Grammar",
                "state": "open",
                "parent": "P1",
                "depth": 0,
                "needs": [
                  "T1"
                ],
                "globs": [
                  "src/parse.py"
                ],
                "owner": "",
                "gates": {
                  "research": "",
                  "rules": "",
                  "implement": "",
                  "rubber_duck": "",
                  "critic": "",
                  "standards": "",
                  "unit_tests": "",
                  "bug_hunt": "",
                  "dedupe": "",
                  "merge": ""
                }
              }
            ]
          }
        ],
        "unphased": [],
        "critical_path": [
          "T2",
          "T3"
        ]
      }
  
    ''',
    '',
  )
# ---
# name: test_json[board --phase nope]
  tuple(
    1,
    '''
      {
        "schema": "board@1",
        "phase": "nope",
        "text": ""
      }
  
    ''',
    '''
      no such phase or item 'nope'.
  
    ''',
  )
# ---
# name: test_json[board]
  tuple(
    0,
    '''
      {
        "schema": "board@1",
        "text": "<!-- GENERATED by `ddflow render`. Do not edit: the event log is the source of truth. -->\n\n# Work queue\n\n## P1 \u2014 Ship the parser\n\n`open` \u00b7 \u2588\u2588\u2588\u2588\u2588\u2588\u2591\u2591\u2591\u2591\u2591\u2591\u2591\u2591\u2591\u2591\u2591\u2591 1/3 tasks\n\n> Parse the config files.\n\n| | Task | State | Needs | Globs | Gates | Owner |\n|---|---|---|---|---|---|---|\n| [ ] | **T3** Error messages | open | T2 | `src/errors.py` | `          ` | \u2014 |\n| [x] | **T1** Tokenizer | done | \u2014 | `src/lex.py` | `          ` | \u2014 |\n| [ ] | **T2** Grammar | open | T1 | `src/parse.py` | `          ` | \u2014 |\n\n<sub>Gate column order: research \u00b7 rules \u00b7 implement \u00b7 rubber_duck \u00b7 critic \u00b7 standards \u00b7 unit_tests \u00b7 bug_hunt \u00b7 dedupe \u00b7 merge. `x` passed `!` failed `?` unavailable `~` partial `-` skipped</sub>\n\n**Critical path** (2 deep \u2014 this, not the task count, sets the wall-clock floor): `T2` \u2192 `T3`\n",
        "phase": "",
        "phases": [
          {
            "id": "P1",
            "title": "Ship the parser",
            "state": "open",
            "needs": [],
            "holder": "",
            "tasks": [
              {
                "id": "T3",
                "title": "Error messages",
                "state": "open",
                "parent": "P1",
                "depth": 0,
                "needs": [
                  "T2"
                ],
                "globs": [
                  "src/errors.py"
                ],
                "owner": "",
                "gates": {
                  "research": "",
                  "rules": "",
                  "implement": "",
                  "rubber_duck": "",
                  "critic": "",
                  "standards": "",
                  "unit_tests": "",
                  "bug_hunt": "",
                  "dedupe": "",
                  "merge": ""
                }
              },
              {
                "id": "T1",
                "title": "Tokenizer",
                "state": "done",
                "parent": "P1",
                "depth": 0,
                "needs": [],
                "globs": [
                  "src/lex.py"
                ],
                "owner": "",
                "gates": {
                  "research": "",
                  "rules": "",
                  "implement": "",
                  "rubber_duck": "",
                  "critic": "",
                  "standards": "",
                  "unit_tests": "",
                  "bug_hunt": "",
                  "dedupe": "",
                  "merge": ""
                }
              },
              {
                "id": "T2",
                "title": "Grammar",
                "state": "open",
                "parent": "P1",
                "depth": 0,
                "needs": [
                  "T1"
                ],
                "globs": [
                  "src/parse.py"
                ],
                "owner": "",
                "gates": {
                  "research": "",
                  "rules": "",
                  "implement": "",
                  "rubber_duck": "",
                  "critic": "",
                  "standards": "",
                  "unit_tests": "",
                  "bug_hunt": "",
                  "dedupe": "",
                  "merge": ""
                }
              }
            ]
          }
        ],
        "unphased": [],
        "critical_path": [
          "T2",
          "T3"
        ]
      }
  
    ''',
    '',
  )
# ---
# name: test_json[bug list --all]
  tuple(
    0,
    '''
      {
        "schema": "list@1",
        "record_kind": "bug",
        "rows": [
          {
            "id": "B1",
            "kind": "bug",
            "state": "open",
            "title": "Tokenizer drops a trailing comment",
            "owner": "",
            "updated": "2026-01-01T00:08:00Z",
            "phase": "P1",
            "tags": [],
            "item": "T1",
            "regression_tests": [],
            "lesson": ""
          }
        ],
        "total": 1,
        "shown": 1,
        "limit": 50,
        "truncated": false,
        "filters": {}
      }
  
    ''',
    '',
  )
# ---
# name: test_json[bug list --item T1]
  tuple(
    0,
    '''
      {
        "schema": "list@1",
        "record_kind": "bug",
        "rows": [
          {
            "id": "B1",
            "kind": "bug",
            "state": "open",
            "title": "Tokenizer drops a trailing comment",
            "owner": "",
            "updated": "2026-01-01T00:08:00Z",
            "phase": "P1",
            "tags": [],
            "item": "T1",
            "regression_tests": [],
            "lesson": ""
          }
        ],
        "total": 1,
        "shown": 1,
        "limit": 50,
        "truncated": false,
        "filters": {
          "state": "open",
          "item": "T1"
        }
      }
  
    ''',
    '',
  )
# ---
# name: test_json[bug list]
  tuple(
    0,
    '''
      {
        "schema": "list@1",
        "record_kind": "bug",
        "rows": [
          {
            "id": "B1",
            "kind": "bug",
            "state": "open",
            "title": "Tokenizer drops a trailing comment",
            "owner": "",
            "updated": "2026-01-01T00:08:00Z",
            "phase": "P1",
            "tags": [],
            "item": "T1",
            "regression_tests": [],
            "lesson": ""
          }
        ],
        "total": 1,
        "shown": 1,
        "limit": 50,
        "truncated": false,
        "filters": {
          "state": "open"
        }
      }
  
    ''',
    '',
  )
# ---
# name: test_json[history]
  tuple(
    0,
    '''
      {
        "schema": "history@1",
        "total": 10,
        "shown": 10,
        "events": [
          {
            "id": "e7c26d5ae585115932e7f7db6",
            "at": "2026-01-01T00:10:00Z",
            "lamport": 10,
            "agent": "golden",
            "kind": "item.completed",
            "subject": "T1",
            "data": {
              "kind": "task",
              "sha": ""
            }
          },
          {
            "id": "e74721cbed98fa006bd15157d",
            "at": "2026-01-01T00:09:00Z",
            "lamport": 9,
            "agent": "golden",
            "kind": "research.recorded",
            "subject": "R49b608db82",
            "data": {
              "budget": "",
              "claim": "It parses 10k lines in under 50ms",
              "falsifier": "Over 50ms",
              "item": "P1",
              "mechanism": "",
              "probe": "python bench.py",
              "probe_output": "31ms",
              "question": "Is recursive descent fast enough?",
              "sources": [],
              "verdict": "CONFIRMED"
            }
          },
          {
            "id": "e6dfdee7c7c2571d631adc652",
            "at": "2026-01-01T00:08:00Z",
            "lamport": 8,
            "agent": "golden",
            "kind": "bug.found",
            "subject": "B1",
            "data": {
              "item": "T1",
              "summary": "Tokenizer drops a trailing comment"
            }
          },
          {
            "id": "e8fe58c44aa71575355d871d4",
            "at": "2026-01-01T00:07:00Z",
            "lamport": 7,
            "agent": "golden",
            "kind": "memory.recorded",
            "subject": "M1",
            "data": {
              "text": "The CI runner has 4 cores"
            }
          },
          {
            "id": "ebb9773ff4c01632f0160dfb2",
            "at": "2026-01-01T00:06:00Z",
            "lamport": 6,
            "agent": "golden",
            "kind": "decision.recorded",
            "subject": "D1",
            "data": {
              "alternatives": "",
              "consequences": "",
              "context": "",
              "decided_by": "",
              "decision": "Recursive descent, no generator",
              "globs": [
                "src/**"
              ],
              "item": "",
              "sources": [],
              "status": "accepted",
              "supersedes": [],
              "tags": [],
              "title": "Hand-written parser"
            }
          },
          {
            "id": "e920a07beee33642ce3eb0488",
            "at": "2026-01-01T00:05:00Z",
            "lamport": 5,
            "agent": "golden",
            "kind": "lesson.recorded",
            "subject": "L1",
            "data": {
              "how": "golden tests",
              "rule": "Snapshot parser output first",
              "seen_in": [],
              "supersedes": [],
              "tags": [],
              "title": "Pin the grammar before refactoring it",
              "why": "A refactor changed precedence silently"
            }
          },
          {
            "id": "ec8dfc10988ee3229f56bb82c",
            "at": "2026-01-01T00:04:00Z",
            "lamport": 4,
            "agent": "golden",
            "kind": "task.added",
            "subject": "T3",
            "data": {
              "body": "",
              "globs": [
                "src/errors.py"
              ],
              "line": "",
              "needs": [
                "T2"
              ],
              "parent": "P1",
              "priority": 5,
              "tags": [],
              "title": "Error messages"
            }
          },
          {
            "id": "ec6a46462ec70b5180f1bb53f",
            "at": "2026-01-01T00:03:00Z",
            "lamport": 3,
            "agent": "golden",
            "kind": "task.added",
            "subject": "T2",
            "data": {
              "body": "",
              "globs": [
                "src/parse.py"
              ],
              "line": "",
              "needs": [
                "T1"
              ],
              "parent": "P1",
              "priority": 100,
              "tags": [],
              "title": "Grammar"
            }
          },
          {
            "id": "ecc6c7a0f58520f6dd87f16d0",
            "at": "2026-01-01T00:02:00Z",
            "lamport": 2,
            "agent": "golden",
            "kind": "task.added",
            "subject": "T1",
            "data": {
              "body": "",
              "globs": [
                "src/lex.py"
              ],
              "line": "",
              "needs": [],
              "parent": "P1",
              "priority": 100,
              "tags": [],
              "title": "Tokenizer"
            }
          },
          {
            "id": "ed29be632f75d8a80613325d6",
            "at": "2026-01-01T00:01:00Z",
            "lamport": 1,
            "agent": "golden",
            "kind": "phase.added",
            "subject": "P1",
            "data": {
              "body": "Parse the config files.",
              "globs": [],
              "line": "",
              "needs": [],
              "priority": 100,
              "tags": [],
              "title": "Ship the parser"
            }
          }
        ]
      }
  
    ''',
    '',
  )
# ---
# name: test_json[lesson list --all]
  tuple(
    0,
    '''
      {
        "schema": "list@1",
        "record_kind": "lesson",
        "rows": [
          {
            "id": "L1",
            "kind": "lesson",
            "state": "live",
            "title": "Pin the grammar before refactoring it",
            "owner": "golden",
            "updated": "2026-01-01T00:05:00Z",
            "phase": "",
            "tags": []
          }
        ],
        "total": 1,
        "shown": 1,
        "limit": 50,
        "truncated": false,
        "filters": {}
      }
  
    ''',
    '',
  )
# ---
# name: test_json[lesson list]
  tuple(
    0,
    '''
      {
        "schema": "list@1",
        "record_kind": "lesson",
        "rows": [
          {
            "id": "L1",
            "kind": "lesson",
            "state": "live",
            "title": "Pin the grammar before refactoring it",
            "owner": "golden",
            "updated": "2026-01-01T00:05:00Z",
            "phase": "",
            "tags": []
          }
        ],
        "total": 1,
        "shown": 1,
        "limit": 50,
        "truncated": false,
        "filters": {
          "state": "live"
        }
      }
  
    ''',
    '',
  )
# ---
# name: test_json[loops]
  tuple(
    2,
    '''
      []
  
    ''',
    '',
  )
# ---
# name: test_json[phase list --state done]
  tuple(
    2,
    '''
      {
        "schema": "list@1",
        "record_kind": "phase",
        "rows": [],
        "total": 0,
        "shown": 0,
        "limit": 50,
        "truncated": false,
        "filters": {
          "state": "done"
        },
        "reason": "No phase records matching {'state': 'done'}."
      }
  
    ''',
    '',
  )
# ---
# name: test_json[phase list]
  tuple(
    0,
    '''
      {
        "schema": "list@1",
        "record_kind": "phase",
        "rows": [
          {
            "id": "P1",
            "kind": "phase",
            "state": "open",
            "title": "Ship the parser",
            "owner": "",
            "updated": "2026-01-01T00:01:00Z",
            "phase": "P1",
            "tags": [],
            "done": 1,
            "total": 3
          }
        ],
        "total": 1,
        "shown": 1,
        "limit": 50,
        "truncated": false,
        "filters": {}
      }
  
    ''',
    '',
  )
# ---
# name: test_json[progress T1]
  tuple(
    0,
    '''
      [
        {
          "item": "T1",
          "kind": "task",
          "title": "Tokenizer",
          "state": "done",
          "attempts": 0,
          "held_seconds": 0,
          "gate_runs": 0,
          "commits": 0,
          "holders": [],
          "completed_times": 1
        }
      ]
  
    ''',
    '',
  )
# ---
# name: test_json[progress]
  tuple(
    0,
    '''
      [
        {
          "item": "P1",
          "kind": "phase",
          "title": "Ship the parser",
          "state": "open",
          "attempts": 0,
          "held_seconds": 0,
          "gate_runs": 0,
          "commits": 0,
          "holders": [],
          "completed_times": 0
        },
        {
          "item": "T1",
          "kind": "task",
          "title": "Tokenizer",
          "state": "done",
          "attempts": 0,
          "held_seconds": 0,
          "gate_runs": 0,
          "commits": 0,
          "holders": [],
          "completed_times": 1
        },
        {
          "item": "T2",
          "kind": "task",
          "title": "Grammar",
          "state": "open",
          "attempts": 0,
          "held_seconds": 0,
          "gate_runs": 0,
          "commits": 0,
          "holders": [],
          "completed_times": 0
        },
        {
          "item": "T3",
          "kind": "task",
          "title": "Error messages",
          "state": "open",
          "attempts": 0,
          "held_seconds": 0,
          "gate_runs": 0,
          "commits": 0,
          "holders": [],
          "completed_times": 0
        }
      ]
  
    ''',
    '',
  )
# ---
# name: test_json[rebuild]
  tuple(
    0,
    '''
      {
        "schema": "rebuild@1",
        "events": 10,
        "items": 4
      }
  
    ''',
    '',
  )
# ---
# name: test_json[recover]
  tuple(
    2,
    '''
      []
  
    ''',
    '',
  )
# ---
# name: test_json[render --show board]
  tuple(
    0,
    '''
      <!-- GENERATED by `ddflow render`. Do not edit: the event log is the source of truth. -->
      
      # Work queue
      
      ## P1 — Ship the parser
      
      `open` · ██████░░░░░░░░░░░░ 1/3 tasks
      
      > Parse the config files.
      
      | | Task | State | Needs | Globs | Gates | Owner |
      |---|---|---|---|---|---|---|
      | [ ] | **T3** Error messages | open | T2 | `src/errors.py` | `          ` | — |
      | [x] | **T1** Tokenizer | done | — | `src/lex.py` | `          ` | — |
      | [ ] | **T2** Grammar | open | T1 | `src/parse.py` | `          ` | — |
      
      <sub>Gate column order: research · rules · implement · rubber_duck · critic · standards · unit_tests · bug_hunt · dedupe · merge. `x` passed `!` failed `?` unavailable `~` partial `-` skipped</sub>
      
      **Critical path** (2 deep — this, not the task count, sets the wall-clock floor): `T2` → `T3`
      
  
    ''',
    '',
  )
# ---
# name: test_json[render --show bogus]
  tuple(
    1,
    '',
    '''
      unknown view 'bogus'; known: board, bugs, decisions, lessons, lessons-summary, research, sessions
  
    ''',
  )
# ---
# name: test_json[render --show lessons]
  tuple(
    0,
    '''
      <!-- GENERATED by `ddflow render`. Do not edit: the event log is the source of truth. -->
      
      # Lessons
      
      ## untagged
      
      ### Pin the grammar before refactoring it
      
      **Rule.** Snapshot parser output first
      
      **Why.** A refactor changed precedence silently
      
      **How to apply.** golden tests
      
  
    ''',
    '',
  )
# ---
# name: test_json[replay --verify]
  tuple(
    0,
    '''
      # Reconstruction brief — proj
      
      This document was generated from ddflow's event log by `ddflow replay`. It is
      the complete decision history of the project: every operator instruction, every
      research verdict, every lesson, and the shape of the work queue.
      
      **How to use it.** Hand it to a coding agent with an empty repository and ask it
      to work through the instructions in order. It will not reproduce the original
      source byte-for-byte — model outputs are not deterministic — but it has every
      input that produced the original, which no other artefact does.
      
      - Phases: 1
      - Tasks: 3
      - Lessons carried forward: 1
      - Architectural decisions in force: 1
      - Research notes: 1 (1 confirmed, 0 refuted)
      
      ## Architectural decisions in force
      
      These bind the rebuild. They are the part no other artefact records: source
      code shows what was built and never why, nor what was rejected on the way.
      
      - **Hand-written parser** — Recursive descent, no generator
        - governs: src/**
      
      ## Standing knowledge — read before starting
      
      These were learned the hard way during the original build. They are inputs,
      not history: applying them is how the rebuild avoids repeating the mistakes.
      
      - **Pin the grammar before refactoring it** — Snapshot parser output first
      
      ## The instruction history
      
      ### 1. [PHASE] 2026-01-01T00:01:00Z — `P1`
      
      P1: Ship the parser
      
      Parse the config files.
      
      ### 2. [TASK] 2026-01-01T00:02:00Z — `T1`
      
      T1: Tokenizer (in P1; needs -; writes src/lex.py)
      
      ### 3. [TASK] 2026-01-01T00:03:00Z — `T2`
      
      T2: Grammar (in P1; needs T1; writes src/parse.py)
      
      ### 4. [TASK] 2026-01-01T00:04:00Z — `T3`
      
      T3: Error messages (in P1; needs T2; writes src/errors.py)
      
      ### 5. [LESSON] 2026-01-01T00:05:00Z
      
      Pin the grammar before refactoring it: Snapshot parser output first
      
      ### 6. [DECISION] 2026-01-01T00:06:00Z
      
      Hand-written parser
      
      Decision: Recursive descent, no generator
      
      Governs: src/**
      
      ### 7. [RESEARCH] 2026-01-01T00:09:00Z — `P1`
      **Verdict: CONFIRMED**
      
      Is recursive descent fast enough? -> It parses 10k lines in under 50ms
      
      ### 8. [SHIPPED] 2026-01-01T00:10:00Z — `T1`
      
      T1
      
  
    ''',
    '',
  )
# ---
# name: test_json[replay]
  tuple(
    0,
    '''
      # Reconstruction brief — proj
      
      This document was generated from ddflow's event log by `ddflow replay`. It is
      the complete decision history of the project: every operator instruction, every
      research verdict, every lesson, and the shape of the work queue.
      
      **How to use it.** Hand it to a coding agent with an empty repository and ask it
      to work through the instructions in order. It will not reproduce the original
      source byte-for-byte — model outputs are not deterministic — but it has every
      input that produced the original, which no other artefact does.
      
      - Phases: 1
      - Tasks: 3
      - Lessons carried forward: 1
      - Architectural decisions in force: 1
      - Research notes: 1 (1 confirmed, 0 refuted)
      
      ## Architectural decisions in force
      
      These bind the rebuild. They are the part no other artefact records: source
      code shows what was built and never why, nor what was rejected on the way.
      
      - **Hand-written parser** — Recursive descent, no generator
        - governs: src/**
      
      ## Standing knowledge — read before starting
      
      These were learned the hard way during the original build. They are inputs,
      not history: applying them is how the rebuild avoids repeating the mistakes.
      
      - **Pin the grammar before refactoring it** — Snapshot parser output first
      
      ## The instruction history
      
      ### 1. [PHASE] 2026-01-01T00:01:00Z — `P1`
      
      P1: Ship the parser
      
      Parse the config files.
      
      ### 2. [TASK] 2026-01-01T00:02:00Z — `T1`
      
      T1: Tokenizer (in P1; needs -; writes src/lex.py)
      
      ### 3. [TASK] 2026-01-01T00:03:00Z — `T2`
      
      T2: Grammar (in P1; needs T1; writes src/parse.py)
      
      ### 4. [TASK] 2026-01-01T00:04:00Z — `T3`
      
      T3: Error messages (in P1; needs T2; writes src/errors.py)
      
      ### 5. [LESSON] 2026-01-01T00:05:00Z
      
      Pin the grammar before refactoring it: Snapshot parser output first
      
      ### 6. [DECISION] 2026-01-01T00:06:00Z
      
      Hand-written parser
      
      Decision: Recursive descent, no generator
      
      Governs: src/**
      
      ### 7. [RESEARCH] 2026-01-01T00:09:00Z — `P1`
      **Verdict: CONFIRMED**
      
      Is recursive descent fast enough? -> It parses 10k lines in under 50ms
      
      ### 8. [SHIPPED] 2026-01-01T00:10:00Z — `T1`
      
      T1
      
  
    ''',
    '',
  )
# ---
# name: test_json[research list --limit 1]
  tuple(
    0,
    '''
      {
        "schema": "research_add@1",
        "record_kind": "research",
        "rows": [
          {
            "id": "R49b608db82",
            "kind": "research",
            "state": "confirmed",
            "title": "Is recursive descent fast enough?",
            "owner": "",
            "updated": "2026-01-01T00:09:00Z",
            "phase": "P1",
            "tags": []
          }
        ],
        "total": 1,
        "shown": 1,
        "limit": 1,
        "truncated": false,
        "filters": {}
      }
  
    ''',
    '',
  )
# ---
# name: test_json[research list]
  tuple(
    0,
    '''
      {
        "schema": "research_add@1",
        "record_kind": "research",
        "rows": [
          {
            "id": "R49b608db82",
            "kind": "research",
            "state": "confirmed",
            "title": "Is recursive descent fast enough?",
            "owner": "",
            "updated": "2026-01-01T00:09:00Z",
            "phase": "P1",
            "tags": []
          }
        ],
        "total": 1,
        "shown": 1,
        "limit": 50,
        "truncated": false,
        "filters": {}
      }
  
    ''',
    '',
  )
# ---
# name: test_json[search --exact tok]
  tuple(
    0,
    '''
      {
        "schema": "list@1",
        "record_kind": "search",
        "query": "tok",
        "mode": "exact",
        "rows": [
          {
            "kind": "task",
            "id": "T1",
            "state": "done",
            "date": "2026-01-01T00:10:00Z",
            "owner": "",
            "snippet": "Tokenizer",
            "score": null
          },
          {
            "kind": "bug",
            "id": "B1",
            "state": "open",
            "date": "2026-01-01T00:08:00Z",
            "owner": "",
            "snippet": "Tokenizer drops a trailing comment",
            "score": null
          }
        ],
        "total": 2,
        "shown": 2,
        "limit": 20,
        "truncated": false,
        "searched": 10,
        "filters": {},
        "note": ""
      }
  
    ''',
    '',
  )
# ---
# name: test_json[search --regex (a+)+$]
  tuple(
    3,
    '',
    '''
      regex refused: a repeat of variable length inside another repeat can take exponential time
  
    ''',
  )
# ---
# name: test_json[search --regex tok.*]
  tuple(
    0,
    '''
      {
        "schema": "list@1",
        "record_kind": "search",
        "query": "tok.*",
        "mode": "regex",
        "rows": [
          {
            "kind": "task",
            "id": "T1",
            "state": "done",
            "date": "2026-01-01T00:10:00Z",
            "owner": "",
            "snippet": "Tokenizer",
            "score": null
          },
          {
            "kind": "bug",
            "id": "B1",
            "state": "open",
            "date": "2026-01-01T00:08:00Z",
            "owner": "",
            "snippet": "Tokenizer drops a trailing comment",
            "score": null
          }
        ],
        "total": 2,
        "shown": 2,
        "limit": 20,
        "truncated": false,
        "searched": 10,
        "filters": {},
        "note": ""
      }
  
    ''',
    '',
  )
# ---
# name: test_json[search tokenizer]
  tuple(
    0,
    '''
      {
        "schema": "list@1",
        "record_kind": "search",
        "query": "tokenizer",
        "mode": "ranked",
        "rows": [
          {
            "kind": "task",
            "id": "T1",
            "state": "done",
            "date": "2026-01-01T00:10:00Z",
            "owner": "",
            "snippet": "Tokenizer",
            "score": 1.0
          },
          {
            "kind": "bug",
            "id": "B1",
            "state": "open",
            "date": "2026-01-01T00:08:00Z",
            "owner": "",
            "snippet": "Tokenizer drops a trailing comment",
            "score": 0.4406
          }
        ],
        "total": 2,
        "shown": 2,
        "limit": 20,
        "truncated": false,
        "searched": 10,
        "filters": {},
        "note": ""
      }
  
    ''',
    '',
  )
# ---
# name: test_json[search zzzzqq]
  tuple(
    2,
    '''
      {
        "schema": "list@1",
        "record_kind": "search",
        "query": "zzzzqq",
        "mode": "ranked",
        "rows": [],
        "total": 0,
        "shown": 0,
        "limit": 20,
        "truncated": false,
        "searched": 10,
        "filters": {},
        "note": ""
      }
  
    ''',
    '',
  )
# ---
# name: test_json[session list --state open]
  tuple(
    2,
    '''
      {
        "schema": "list@1",
        "record_kind": "session",
        "rows": [],
        "total": 0,
        "shown": 0,
        "limit": 50,
        "truncated": false,
        "filters": {
          "state": "open"
        }
      }
  
    ''',
    '',
  )
# ---
# name: test_json[session list]
  tuple(
    2,
    '''
      {
        "schema": "list@1",
        "record_kind": "session",
        "rows": [],
        "total": 0,
        "shown": 0,
        "limit": 50,
        "truncated": false,
        "filters": {}
      }
  
    ''',
    '',
  )
# ---
# name: test_json[session show nope]
  tuple(
    3,
    '',
    '''
      no session 'nope' (`ddflow session list` shows them)
  
    ''',
  )
# ---
# name: test_json[show B1]
  tuple(
    0,
    '''
      {
        "schema": "show@1",
        "id": "B1",
        "item": "T1",
        "summary": "Tokenizer drops a trailing comment",
        "found_at": "2026-01-01T00:08:00Z",
        "fixed_at": "",
        "regression_test": "",
        "regression_tests": [],
        "lesson": "",
        "changelog": {},
        "invalid_at": "",
        "invalid_reason": "",
        "evidence": "",
        "title": "",
        "severity": "",
        "scope": "project",
        "fix_task": "",
        "upstream_url": "",
        "upstream_number": "",
        "upstream_delivery": "",
        "upstream_sent_at": "",
        "upstream_digest": "",
        "reopened_at": "",
        "reopen_reason": "",
        "kind": "bug",
        "state": "open",
        "fixing": [],
        "mentioned_by": [],
        "additions": [],
        "links": [],
        "dismissals": [],
        "linked_from": []
      }
  
    ''',
    '',
  )
# ---
# name: test_json[show NOPE]
  tuple(
    1,
    '',
    '''
      no such item or bug 'NOPE'
  
    ''',
  )
# ---
# name: test_json[show T1]
  tuple(
    0,
    '''
      {
        "schema": "show@1",
        "id": "T1",
        "kind": "task",
        "title": "Tokenizer",
        "parent": "P1",
        "needs": [],
        "globs": [
          "src/lex.py"
        ],
        "resources": [],
        "body": "",
        "tags": [],
        "priority": 100,
        "state": "done",
        "lease": null,
        "gates": {},
        "triage": {},
        "worktree": "",
        "branch": "",
        "adopted": false,
        "merged_sha": "",
        "changelog": {},
        "base": "",
        "pr": null,
        "line": "",
        "port_of": "",
        "port_from": "",
        "port_strategy": "",
        "promote_from": "",
        "promote_to": "",
        "port": {},
        "landed_before": "",
        "landed_after": "",
        "fixes": [],
        "blocked_reason": "",
        "created_at": "2026-01-01T00:02:00Z",
        "completed_at": "2026-01-01T00:10:00Z",
        "reopened": [],
        "removed": false,
        "source": "",
        "completion_evidence": "",
        "contested": [],
        "lease_contest": [],
        "displaced": [],
        "additions": [],
        "links": [],
        "dismissals": [],
        "linked_from": [],
        "ledger": {
          "completed_at": "2026-01-01T00:10:00Z",
          "sha": "",
          "requirement": "ea85d180a16d",
          "files_known": false,
          "files_total": 0,
          "files": [],
          "tests": 0,
          "skipped_gates": [],
          "forced": false,
          "amendments": 0,
          "requirement_changed_after": false,
          "reconstructed": true
        }
      }
  
    ''',
    '',
  )
# ---
# name: test_json[show T2]
  tuple(
    0,
    '''
      {
        "schema": "show@1",
        "id": "T2",
        "kind": "task",
        "title": "Grammar",
        "parent": "P1",
        "needs": [
          "T1"
        ],
        "globs": [
          "src/parse.py"
        ],
        "resources": [],
        "body": "",
        "tags": [],
        "priority": 100,
        "state": "open",
        "lease": null,
        "gates": {},
        "triage": {},
        "worktree": "",
        "branch": "",
        "adopted": false,
        "merged_sha": "",
        "changelog": {},
        "base": "",
        "pr": null,
        "line": "",
        "port_of": "",
        "port_from": "",
        "port_strategy": "",
        "promote_from": "",
        "promote_to": "",
        "port": {},
        "landed_before": "",
        "landed_after": "",
        "fixes": [],
        "blocked_reason": "",
        "created_at": "2026-01-01T00:03:00Z",
        "completed_at": "",
        "reopened": [],
        "removed": false,
        "source": "",
        "completion_evidence": "",
        "contested": [],
        "lease_contest": [],
        "displaced": [],
        "additions": [],
        "links": [],
        "dismissals": [],
        "linked_from": []
      }
  
    ''',
    '',
  )
# ---
# name: test_json[status]
  tuple(
    0,
    '''
      {
        "schema": "status@1",
        "phases": {
          "total": 1,
          "done": 0
        },
        "tasks": {
          "total": 3,
          "done": 1,
          "running": 0,
          "ready": 1,
          "held_by_cap": 0,
          "blocked": 1,
          "review": 0,
          "abandoned": 0
        },
        "completed_tasks": [
          {
            "id": "T1",
            "title": "Tokenizer",
            "sha": ""
          }
        ],
        "in_flight": [],
        "ready_now": [
          {
            "id": "T2",
            "title": "Grammar"
          }
        ],
        "interrupted": [],
        "held_by_cap": [],
        "cap": "",
        "parallel": "parallel: 4 (fixed)",
        "agent_hours": 0.0,
        "commits": 0,
        "decisions": 1,
        "lessons": 1,
        "open_bugs": 1,
        "loops": [],
        "recoverable": []
      }
  
    ''',
    '',
  )
# ---
# name: test_json[task list --owner nobody]
  tuple(
    2,
    '''
      {
        "schema": "list@1",
        "record_kind": "task",
        "rows": [],
        "total": 0,
        "shown": 0,
        "limit": 50,
        "truncated": false,
        "filters": {
          "owner": "nobody"
        },
        "reason": "No task records matching {'agent': 'nobody'}."
      }
  
    ''',
    '',
  )
# ---
# name: test_json[task list --phase P1 --limit 1]
  tuple(
    0,
    '''
      {
        "schema": "list@1",
        "record_kind": "task",
        "rows": [
          {
            "id": "T1",
            "kind": "task",
            "state": "done",
            "title": "Tokenizer",
            "owner": "",
            "updated": "2026-01-01T00:10:00Z",
            "phase": "P1",
            "tags": []
          }
        ],
        "total": 3,
        "shown": 1,
        "limit": 1,
        "truncated": true,
        "filters": {
          "phase": "P1"
        }
      }
  
    ''',
    '',
  )
# ---
# name: test_json[task list --since 2020-01-01]
  tuple(
    0,
    '''
      {
        "schema": "list@1",
        "record_kind": "task",
        "rows": [
          {
            "id": "T1",
            "kind": "task",
            "state": "done",
            "title": "Tokenizer",
            "owner": "",
            "updated": "2026-01-01T00:10:00Z",
            "phase": "P1",
            "tags": []
          },
          {
            "id": "T3",
            "kind": "task",
            "state": "open",
            "title": "Error messages",
            "owner": "",
            "updated": "2026-01-01T00:04:00Z",
            "phase": "P1",
            "tags": []
          },
          {
            "id": "T2",
            "kind": "task",
            "state": "open",
            "title": "Grammar",
            "owner": "",
            "updated": "2026-01-01T00:03:00Z",
            "phase": "P1",
            "tags": []
          }
        ],
        "total": 3,
        "shown": 3,
        "limit": 50,
        "truncated": false,
        "filters": {
          "since": "2020-01-01"
        }
      }
  
    ''',
    '',
  )
# ---
# name: test_json[task list --state bogus]
  tuple(
    2,
    '''
      {
        "schema": "list@1",
        "record_kind": "task",
        "rows": [],
        "total": 0,
        "shown": 0,
        "limit": 50,
        "truncated": false,
        "filters": {
          "state": "bogus"
        },
        "reason": "No task records matching {'state': 'bogus'}."
      }
  
    ''',
    '',
  )
# ---
# name: test_json[task list --state done]
  tuple(
    0,
    '''
      {
        "schema": "list@1",
        "record_kind": "task",
        "rows": [
          {
            "id": "T1",
            "kind": "task",
            "state": "done",
            "title": "Tokenizer",
            "owner": "",
            "updated": "2026-01-01T00:10:00Z",
            "phase": "P1",
            "tags": []
          }
        ],
        "total": 1,
        "shown": 1,
        "limit": 50,
        "truncated": false,
        "filters": {
          "state": "done"
        }
      }
  
    ''',
    '',
  )
# ---
# name: test_json[task list --tag x]
  tuple(
    2,
    '''
      {
        "schema": "list@1",
        "record_kind": "task",
        "rows": [],
        "total": 0,
        "shown": 0,
        "limit": 50,
        "truncated": false,
        "filters": {
          "tag": "x"
        },
        "reason": "No task records matching {'tag': 'x'}."
      }
  
    ''',
    '',
  )
# ---
# name: test_json[task list]
  tuple(
    0,
    '''
      {
        "schema": "list@1",
        "record_kind": "task",
        "rows": [
          {
            "id": "T1",
            "kind": "task",
            "state": "done",
            "title": "Tokenizer",
            "owner": "",
            "updated": "2026-01-01T00:10:00Z",
            "phase": "P1",
            "tags": []
          },
          {
            "id": "T3",
            "kind": "task",
            "state": "open",
            "title": "Error messages",
            "owner": "",
            "updated": "2026-01-01T00:04:00Z",
            "phase": "P1",
            "tags": []
          },
          {
            "id": "T2",
            "kind": "task",
            "state": "open",
            "title": "Grammar",
            "owner": "",
            "updated": "2026-01-01T00:03:00Z",
            "phase": "P1",
            "tags": []
          }
        ],
        "total": 3,
        "shown": 3,
        "limit": 50,
        "truncated": false,
        "filters": {}
      }
  
    ''',
    '',
  )
# ---
